# lintal

./: .gitignore  .mise.toml  CLAUDE.md  Cargo.toml  INDENTATION_PLAN.md  LICENSE  NOTICE  README.md  mise.toml  pyproject.toml
.beads/: issues.jsonl
crates/jruff/: Cargo.toml
crates/jruff/src/: main.rs
crates/jruff_diagnostics/: Cargo.toml
crates/jruff_diagnostics/src/: diagnostic.rs  edit.rs  fix.rs  lib.rs  source_map.rs
crates/jruff_linter/: Cargo.toml
crates/jruff_linter/src/: lib.rs
crates/jruff_linter/src/rules/: mod.rs
crates/jruff_linter/src/rules/whitespace/: mod.rs  whitespace_around.rs
crates/jruff_source_file/: Cargo.toml
crates/jruff_source_file/src/: lib.rs  line_index.rs  line_ranges.rs  newlines.rs
crates/lintal/: Cargo.toml
crates/lintal/src/: main.rs
crates/lintal_checkstyle/: Cargo.toml
crates/lintal_checkstyle/src/: lib.rs  lintal_config.rs  merged_config.rs
crates/lintal_diagnostics/: Cargo.toml
crates/lintal_diagnostics/src/: diagnostic.rs
crates/lintal_linter/: Cargo.toml
crates/lintal_linter/src/: lib.rs  registry.rs  suppression.rs
crates/lintal_linter/src/rules/: mod.rs
crates/lintal_linter/src/rules/blocks/: avoid_nested_blocks.rs  common.rs  empty_block.rs  empty_catch_block.rs  left_curly.rs  mod.rs  need_braces.rs  right_curly.rs
crates/lintal_linter/src/rules/coding/: covariant_equals.rs  declaration_order.rs  default_comes_last.rs  empty_statement.rs  equals_hashcode.rs  fall_through.rs  hidden_field.rs  illegal_type.rs  inner_assignment.rs  missing_switch_default.rs  mod.rs  multiple_variable_declarations.rs  nested_try_depth.rs  one_statement_per_line.rs  package_declaration.rs  simplify_boolean_expression.rs  simplify_boolean_return.rs  string_literal_equality.rs
crates/lintal_linter/src/rules/design/: hide_utility_class_constructor.rs  mod.rs  mutable_exception.rs
crates/lintal_linter/src/rules/imports/: common.rs  mod.rs  redundant_import.rs  unused_imports.rs
crates/lintal_linter/src/rules/misc/: descendant_token.rs  mod.rs
crates/lintal_linter/src/rules/modifier/: common.rs  final_class.rs  final_local_variable.rs  final_parameters.rs  mod.rs  modifier_order.rs  redundant_modifier.rs
crates/lintal_linter/src/rules/naming/: constant_name.rs  local_final_variable_name.rs  local_variable_name.rs  member_name.rs  method_name.rs  parameter_name.rs  static_variable_name.rs  type_name.rs
crates/lintal_linter/src/rules/regexp/: mod.rs  regexp_singleline_java.rs
crates/lintal_linter/src/rules/sizes/: line_length.rs  method_length.rs  mod.rs
crates/lintal_linter/src/rules/style/: array_type_style.rs  mod.rs  upper_ell.rs
crates/lintal_linter/src/rules/whitespace/: common.rs  empty_for_initializer_pad.rs  empty_line_separator.rs  file_tab_character.rs  method_param_pad.rs  mod.rs  no_whitespace_after.rs  no_whitespace_before.rs  operator_wrap.rs  paren_pad.rs  single_space_separator.rs  typecast_paren_pad.rs  whitespace_after.rs  whitespace_around.rs
crates/lintal_linter/src/rules/whitespace/indentation/: indent_level.rs  mod.rs
crates/lintal_linter/src/rules/whitespace/indentation/handlers/: base.rs  mod.rs
crates/lintal_linter/tests/: autofix_roundtrip.rs  autofix_roundtrip_unsafe.rs  checkstyle_arraytypestyle.rs  checkstyle_avoidnestedblocks.rs  checkstyle_compat.rs  checkstyle_covariantequals.rs  checkstyle_declarationorder.rs  checkstyle_defaultcomeslast.rs  checkstyle_descendanttoken.rs  checkstyle_emptyblock.rs  checkstyle_emptycatchblock.rs  checkstyle_emptyforinitializerpad.rs  checkstyle_emptylineseparator.rs  checkstyle_emptystatement.rs  checkstyle_equalshashcode.rs  checkstyle_fallthrough.rs  checkstyle_filetabcharacter.rs  checkstyle_finalclass.rs  checkstyle_finallocalvariable.rs  checkstyle_finalparameters.rs  checkstyle_hiddenfield.rs  checkstyle_hideutilityclassconstructor.rs  checkstyle_illegaltype.rs  checkstyle_indentation.rs  checkstyle_innerassignment.rs  checkstyle_leftcurly.rs  checkstyle_linelength.rs  checkstyle_methodlength.rs  checkstyle_methodparampad.rs  checkstyle_missingswitchdefault.rs  checkstyle_modifierorder.rs  checkstyle_mutableexception.rs  checkstyle_needbraces.rs  checkstyle_nestedtrydepth.rs  checkstyle_nowhitespaceafter.rs  checkstyle_nowhitespacebefore.rs  checkstyle_operatorwrap.rs  checkstyle_packagedeclaration.rs  checkstyle_parenpad.rs  checkstyle_redundantimport.rs  (+13 more)
crates/lintal_linter/tests/fixtures/autofix/blocks/left_curly/eol/: Input.java  checkstyle.xml
crates/lintal_linter/tests/fixtures/autofix/blocks/left_curly/nl/: Input.java  checkstyle.xml
crates/lintal_linter/tests/fixtures/autofix/blocks/left_curly/nlow/: Expected.java  Input.java  checkstyle.xml
crates/lintal_linter/tests/fixtures/autofix/blocks/right_curly/alone/: Expected.java  checkstyle.xml
crates/lintal_linter/tests/fixtures/autofix/blocks/right_curly/same/: Expected.java  checkstyle.xml
crates/lintal_linter/tests/fixtures/autofix/coding/one_statement_per_line/default/: Expected.java  Input.java  checkstyle.xml
crates/lintal_linter/tests/fixtures/autofix/imports/redundant_import/default/: Expected.java  Input.java  checkstyle.xml
crates/lintal_linter/tests/fixtures/autofix/imports/unused_imports/default/: Expected.java  Input.java  checkstyle.xml
crates/lintal_linter/tests/fixtures/autofix/modifier/final_class/default/: Expected.java  Input.java  checkstyle.xml
crates/lintal_linter/tests/fixtures/autofix/modifier/final_local_variable/default/: Expected.java  Input.java  checkstyle.xml
crates/lintal_linter/tests/fixtures/autofix/modifier/final_parameters/default/: Expected.java  Input.java  checkstyle.xml
crates/lintal_linter/tests/fixtures/autofix/modifier/modifier_order/default/: Expected.java  Input.java  checkstyle.xml
crates/lintal_linter/tests/fixtures/autofix/modifier/redundant_modifier/default/: Expected.java  Input.java  checkstyle.xml
crates/lintal_source_file/: Cargo.toml
crates/lintal_source_file/src/: line_ranges.rs  newlines.rs
crates/lintal_text_size/: Cargo.toml
crates/lintal_text_size/src/: lib.rs
docker/: .dockerignore  (+6 more)
(+141 files in other folders)
