[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/eleventy7/jruff"
authors = ["eleventy7"]

[workspace.dependencies]
# Internal crates
jruff = { path = "crates/jruff" }
jruff_java_parser = { path = "crates/jruff_java_parser" }
jruff_java_cst = { path = "crates/jruff_java_cst" }
jruff_checkstyle = { path = "crates/jruff_checkstyle" }
jruff_linter = { path = "crates/jruff_linter" }
jruff_diagnostics = { path = "crates/jruff_diagnostics" }
jruff_text_size = { path = "crates/jruff_text_size" }
jruff_source_file = { path = "crates/jruff_source_file" }

# External dependencies
tree-sitter = "0.24"
tree-sitter-java = "0.23"
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
walkdir = "2.5"
anyhow = "1.0"
memchr = "2.7"
get-size2 = { version = "0.7", features = ["derive"] }
is-macro = "0.3"

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "fat"
codegen-units = 1
