[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.92"
license = "MIT"
repository = "https://github.com/eleventy7/lintal"
authors = ["eleventy7"]

[workspace.dependencies]
# Internal crates
lintal = { path = "crates/lintal" }
lintal_java_parser = { path = "crates/lintal_java_parser" }
lintal_java_cst = { path = "crates/lintal_java_cst" }
lintal_checkstyle = { path = "crates/lintal_checkstyle" }
lintal_linter = { path = "crates/lintal_linter" }
lintal_diagnostics = { path = "crates/lintal_diagnostics" }
lintal_text_size = { path = "crates/lintal_text_size" }
lintal_source_file = { path = "crates/lintal_source_file" }

# External dependencies
tree-sitter = "0.26"
tree-sitter-java = "0.23"
quick-xml = { version = "0.39", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
colored = "3.1"
walkdir = "2.5"
anyhow = "1.0"
rayon = "1.11"
memchr = "2.7"
get-size2 = { version = "0.7", features = ["derive"] }
is-macro = "0.3"

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "fat"
codegen-units = 1
