[package]
name = "jruff"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "A fast Java linter with auto-fix, reading checkstyle.xml configs"

[[bin]]
name = "jruff"
path = "src/main.rs"

[dependencies]
jruff_java_parser = { path = "../jruff_java_parser" }
jruff_java_cst = { path = "../jruff_java_cst" }
jruff_checkstyle = { path = "../jruff_checkstyle" }
jruff_linter = { path = "../jruff_linter" }
jruff_diagnostics = { path = "../jruff_diagnostics" }
jruff_text_size = { path = "../jruff_text_size" }
jruff_source_file = { path = "../jruff_source_file" }

clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
walkdir = "2.5"
anyhow = "1.0"

[dev-dependencies]
