[package]
name = "jruff_diagnostics"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
jruff_text_size = { path = "../jruff_text_size", features = ["get-size"] }
get-size2 = { version = "0.7", features = ["derive"] }
is-macro = "0.3"
serde = { version = "1.0", optional = true }

[features]
serde = ["dep:serde", "jruff_text_size/serde"]

[lints]
workspace = true
