[package]
name = "lintal"
version = "0.1.7"
edition = "2024"
rust-version = "1.92"
license = "MIT"
description = "A fast Java linter with auto-fix, reading checkstyle.xml configs"

[[bin]]
name = "lintal"
path = "src/main.rs"

[dependencies]
lintal_java_parser = { path = "../lintal_java_parser" }
lintal_java_cst = { path = "../lintal_java_cst" }
lintal_checkstyle = { path = "../lintal_checkstyle" }
lintal_linter = { path = "../lintal_linter" }
lintal_diagnostics = { path = "../lintal_diagnostics" }
lintal_text_size = { path = "../lintal_text_size" }
lintal_source_file = { path = "../lintal_source_file" }

clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
walkdir = "2.5"
anyhow = "1.0"
rayon.workspace = true

[dev-dependencies]
