[package]
name = "lintal_checkstyle"
version = "0.1.7"
edition = "2024"
rust-version = "1.92"
license = "MIT"

[lib]
doctest = false

[dependencies]
quick-xml = { version = "0.39", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.9"

[dev-dependencies]
