[package]
name = "lintal_diagnostics"
version = "0.1.7"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
lintal_text_size = { path = "../lintal_text_size", features = ["get-size"] }
get-size2 = { version = "0.7", features = ["derive"] }
is-macro = "0.3"
serde = { version = "1.0", optional = true }

[features]
serde = ["dep:serde", "lintal_text_size/serde"]

[lints]
workspace = true
