[package]
name = "lintal_text_size"
version = "0.1.7"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", optional = true }
get-size2 = { version = "0.7", features = ["derive"], optional = true }

[dev-dependencies]
serde_test = "1.0"
static_assertions = "1.1"

[features]
serde = ["dep:serde"]
get-size = ["dep:get-size2"]

[lints]
workspace = true
